# tvmonriscv

./: .gitignore  build_llvm.sh  build_tvm.sh  readme.md  requirements.txt
compile/: compile_mnist_host.py  compile_to_c.py  crosscompile_mnist_arm.py  crosscompile_mnist_riscv.py  crosscompile_mnist_riscv_modify.py
compile/modify/: MaxPool2DCallback.py  MaxPool2DStrategy.py
compile_static/: CMakeLists.txt  build.bash  build_model.py  bundle.h  bundle_static.c  demo_static.c
execute/: Makefile  execute_mnist.cc  execute_mnist.py  tvm_runtime_pack.cc  vec_add_c.c
train/: train_mnist.py
